added api doc, edited css

--- a/apidoc.pug
+++ b/apidoc.pug
@@ -1,6 +1,10 @@
-Request type:
+Request type: 
 
-GET
+GET /api/-get all series 
+
+GET /api/series/:id get a specific series 
+
+GET /api/network/:search get all shows from a specific network
 
 Path
 
