created posts for added and getting

--- a/apidoc.pug
+++ b/apidoc.pug
@@ -6,6 +6,8 @@ GET /api/series/:id get a specific series
 
 GET /api/network/:search get all shows from a specific network
 
+POST /api/-creates new series 
+
 Path
 
 Description
